# learnify

./: app.py  main.py  pyproject.toml  requirements.txt
components/: analytics_questions.py  auth.py  pdf_extractor.py  pdf_stats.py  quiz_generator.py  summarizer.py
